WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
82237
[chromium] assertion being hit in CCLayerAnimationController
https://bugs.webkit.org/show_bug.cgi?id=82237
Summary
[chromium] assertion being hit in CCLayerAnimationController
Shawn Singh
Reported
2012-03-26 13:24:25 PDT
Approximately line 244, CCLayerAnimationController::pushNewAnimationsToImplThread(...) ASSERT(m_activeAnimations[i]0>needsSynchronizedStartTime()) I'm hitting this assertion on desktop aura. To reproduce: 1. open poster circle, apple iphone, gmail (with --force-compositing-mode) 2. switch tabs a few times. At some point when switching to poster circle, it triggers this assert and crashes the page.
Attachments
Patch
(6.09 KB, patch)
2012-03-30 08:51 PDT
,
vollick
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Shawn Singh
Comment 1
2012-03-26 13:52:46 PDT
Dana did you mean to dupe this one instead?
Dana Jansens
Comment 2
2012-03-26 13:58:51 PDT
Nope this is different, I didn't hear of this before. Ian may have to look at this.
vollick
Comment 3
2012-03-30 08:51:31 PDT
Created
attachment 134821
[details]
Patch When pushing 'new' animations to the impl thread, the old code did not consider that the animation may be missing on the impl thread because it has already completed. In that case, the old animation would have already notified that it had started and the main thread animation would no longer need a synchronized start time.
James Robinson
Comment 4
2012-03-30 10:37:32 PDT
Comment on
attachment 134821
[details]
Patch Cool, R=me
WebKit Review Bot
Comment 5
2012-03-30 11:39:58 PDT
Comment on
attachment 134821
[details]
Patch Clearing flags on attachment: 134821 Committed
r112701
: <
http://trac.webkit.org/changeset/112701
>
WebKit Review Bot
Comment 6
2012-03-30 11:40:02 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug