[chromium] assertion being hit in CCLayerAnimationController https://bugs.webkit.org/show_bug.cgi?id=82237

Patch by Ian Vollick <vollick@chromium.org> on 2012-03-30
Reviewed by James Robinson.

Source/WebCore:

Animations are no longer pushed to the impl thread if they have already completed.

Tested in CCLayerAnimationControllerTest.doNotSyncFinishedAnimation

* platform/graphics/chromium/cc/CCLayerAnimationController.cpp:
(WebCore::CCLayerAnimationController::pushNewAnimationsToImplThread):

Source/WebKit/chromium:

* tests/CCLayerAnimationControllerTest.cpp:
(WebKitTests::TEST):
(WebKitTests):

Canonical link: https://commits.webkit.org/100083@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@112701 268f45cc-cd09-0410-ab3c-d52691b4dbfc